[gd_scene load_steps=2 format=3 uid="uid://bqq8q5tn5tq8a"]

[ext_resource type="Script" path="res://scripts/AudioSettingsMenu.gd" id="1_1"]

[node name="AudioSettingsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_1")

[node name="Overlay" type="ColorRect" parent="."]
color = Color(0, 0, 0, 0.7)
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MainContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="WheelPanel" type="Panel" parent="MainContainer"]
custom_minimum_size = Vector2(400, 500)

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/WheelPanel"]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="MainContainer/WheelPanel/VBoxContainer"]
text = "ðŸŽµ AJUSTES DE AUDIO ðŸŽµ"
horizontal_alignment = 1
font_size = 24

[node name="HSeparator" type="HSeparator" parent="MainContainer/WheelPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)

[node name="MasterVolume" type="VBoxContainer" parent="MainContainer/WheelPanel/VBoxContainer"]
theme_override_constants/separation = 5

[node name="MasterLabel" type="Label" parent="MainContainer/WheelPanel/VBoxContainer/MasterVolume"]
text = "ðŸ”Š Volumen Maestro"
horizontal_alignment = 1

[node name="VolumeSlider" type="HSlider" parent="MainContainer/WheelPanel/VBoxContainer/MasterVolume"]
custom_minimum_size = Vector2(300, 30)
min_value = 0.0
max_value = 100.0
step = 1.0
value = 100.0

[node name="VolumeLabel" type="Label" parent="MainContainer/WheelPanel/VBoxContainer/MasterVolume"]
text = "100%"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="MainContainer/WheelPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)

[node name="MusicVolume" type="VBoxContainer" parent="MainContainer/WheelPanel/VBoxContainer"]
theme_override_constants/separation = 5

[node name="MusicLabel" type="Label" parent="MainContainer/WheelPanel/VBoxContainer/MusicVolume"]
text = "ðŸŽ¼ MÃºsica"
horizontal_alignment = 1

[node name="VolumeSlider" type="HSlider" parent="MainContainer/WheelPanel/VBoxContainer/MusicVolume"]
custom_minimum_size = Vector2(300, 30)
min_value = 0.0
max_value = 100.0
step = 1.0
value = 80.0

[node name="VolumeLabel" type="Label" parent="MainContainer/WheelPanel/VBoxContainer/MusicVolume"]
text = "80%"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="MainContainer/WheelPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)

[node name="SFXVolume" type="VBoxContainer" parent="MainContainer/WheelPanel/VBoxContainer"]
theme_override_constants/separation = 5

[node name="SFXLabel" type="Label" parent="MainContainer/WheelPanel/VBoxContainer/SFXVolume"]
text = "ðŸ”” Efectos de Sonido"
horizontal_alignment = 1

[node name="VolumeSlider" type="HSlider" parent="MainContainer/WheelPanel/VBoxContainer/SFXVolume"]
custom_minimum_size = Vector2(300, 30)
min_value = 0.0
max_value = 100.0
step = 1.0
value = 70.0

[node name="VolumeLabel" type="Label" parent="MainContainer/WheelPanel/VBoxContainer/SFXVolume"]
text = "70%"
horizontal_alignment = 1

[node name="HSeparator4" type="HSeparator" parent="MainContainer/WheelPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)

[node name="CloseButton" type="Button" parent="MainContainer/WheelPanel/VBoxContainer"]
text = "âœ… Cerrar"
custom_minimum_size = Vector2(200, 40)
